--- a/interlink_index.html
+++ b/interlink_index.html
@@ -1,1 +1,46 @@
 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8"> 
+        <title>Interlink AI</title>
+        <style>
+            body {
+                background-color: black;
+                color: #0F0;
+                font-family: 'Courier New', monospace;
+                margin: 0;
+                padding: 20px;
+                line-height: 1.6;
+            }
+            #terminal {
+                max-width: 800px;
+                margin: 0 auto;
+                padding: 20px;
+                background-color: rgba(0,0,0,0.8);
+                border: 2px solid #0F0;
+                min-height: 400px;
+            }
+            #input-line {
+                display: flex;
+            }
+            #prompt {
+                margin-right: 10px;
+            }
+            #command-input {
+                background: transparent;
+                border: none;
+                color: #0F0;
+                font-family: 'Courier New', monospace;
+                width: 100%;
+                outline: none;
+            }
+            #output {
+                white-space: pre-wrap;
+            }
+            .hidden {
+                display: none;
+            }
+        </style>
+    </head>
+    
