--- a/interlink_index.html
+++ b/interlink_index.html
@@ -130,4 +130,9 @@ Type 'help' for a list of available commands\n`;
             }
         }
     </script>
-    
+        
+    </body>
+
+</html>
+
+
